--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - traefik_proxy
     ports:
       - 19999:19999
+    restart: always
     security_opt:
       - apparmor:unconfined
     volumes:
