relative path to config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "traefik.http.middlewares.custom.headers.stsIncludeSubdomains=true"
       - "traefik.http.middlewares.custom.headers.stsPreload=true"
       - "traefik.http.middlewares.custom.headers.stsSeconds=315360000"
-      - "traefik.http.middlewares.auth.basicauth.usersfile=/config/usersfile"
+      - "traefik.http.middlewares.auth.basicauth.usersfile=`/config/usersfile`"
       - "traefik.http.routers.netdata.entrypoints=websecure"
       - "traefik.http.routers.netdata.middlewares=auth"
       - "traefik.http.routers.netdata.rule=Host(`netdata.${DOMAIN_NAME}`)"
