fix broken path (relative didn't work)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "traefik.http.middlewares.custom.headers.stsIncludeSubdomains=true"
       - "traefik.http.middlewares.custom.headers.stsPreload=true"
       - "traefik.http.middlewares.custom.headers.stsSeconds=315360000"
-      - "traefik.http.middlewares.auth.basicauth.usersfile=`/config/usersfile`"
+      - "traefik.http.middlewares.auth.basicauth.usersfile=/config/usersfile"
       - "traefik.http.routers.netdata.entrypoints=websecure"
       - "traefik.http.routers.netdata.middlewares=auth"
       - "traefik.http.routers.netdata.rule=Host(`netdata.${DOMAIN_NAME}`)"
@@ -25,14 +25,13 @@ services:
       - traefik_proxy
     ports:
       - 19999:19999
-    restart: always
+    restart: unless_stopped
     security_opt:
       - apparmor:unconfined
     volumes:
       - ./config:/config
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
 
 networks:
   traefik_proxy:
